# app-template

./: .gitignore  README.md  pubspec.yaml
automate/: __main__.py
ios/: Podfile
ios/Runner/: bridge_generated.h
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/bridge/: bridge_generated.dart  wrapper.dart
macos/Runner/: bridge_generated.h
native/: Cargo.toml
native/.cargo/: config.toml.template
native/bridge/: Cargo.toml
native/bridge/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  lib.rs
native/hub/: Cargo.toml
native/hub/src/: lib.rs  model.rs  sample_functions.rs  user_action_handler.rs
native/hub/src/bridge/: api.rs  bridge_generated.rs
native/sample_crate_first/: Cargo.toml
native/sample_crate_first/src/: lib.rs
native/sample_crate_second/: Cargo.toml
native/sample_crate_second/src/: lib.rs
native/sample_feature/src/: lib.rs
